# tvoc-sensors-indicator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dev
main/: CMakeLists.txt  home_assistant_config.h  main.c  view_data_types.h
main/display/: display_view.c
main/ha/: ha_config.c  ha_mqtt.c  ha_sensor.c  ha_switch_screen.c
main/nav/: nav.c  nav.h
main/rp2040/: rp2040.h
main/sen5x/: sen5x_mqtt.c  sen5x_mqtt.h
main/sensor/: sensor_model.c  sensor_view.c
main/settings/: settings_view.c
main/ui/: README.md  ui_defer.c  ui_event.c  ui_event.h
main/wifi/: wifi_connect_screen.c  wifi_connect_screen.h  wifi_model.c  wifi_view.c
rp2040/: platformio.ini
rp2040/include/: indicator_rp2040.hpp
rp2040/src/: main.cpp  sensors.cpp
scripts/: check_event_post_safety.py  dev.py  test_sen5x_mqtt_protocol.py  test_ui_geometry.py
sim/: lv_conf.h  main.c
sim/mock/: mock_sensors.c
sim/stubs/: esp_netif.h  indicator_util_stub.c
test/host/: CMakeLists.txt
test/host/main/: CMakeLists.txt  test_app_main.c  test_ui_event.c
